feat: Use ZGC