@@ -1,3 +1,3 @@
 @echo off
 title start-lynxdb-server.bat
-java -Xmx2g -Xms2g -jar lib/lynxdb-server-2023.3.11-snapshot.jar
+java -Xmx2g -Xms2g -XX:+UseZGC -jar lib/lynxdb-server-2023.3.11-snapshot.jar
